--- a/server/src/main/resources/db/changelog/changelog-0.1.yaml
+++ b/server/src/main/resources/db/changelog/changelog-0.1.yaml
@@ -4,7 +4,7 @@ databaseChangeLog:
       author: Michael Fritz
       changes:
         - createTable:
-            tableName: user
+            tableName: users
             columns:
               - column:
                   name: id
