--- a/server/src/main/resources/db/changelog/changelog-0.1.yaml
+++ b/server/src/main/resources/db/changelog/changelog-0.1.yaml
@@ -19,3 +19,6 @@ databaseChangeLog:
               - column:
                   name: password
                   type: varchar(255)
+              - column:
+                  name: auth_provider
+                  type: varchar(15)
