--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -13,7 +13,7 @@ spring:
                         scope:
                             - identify
                             - email
-                        redirectUri: "{baseUrl}/login/oauth2/code/discord"
+                        redirectUri:  "{baseUrl}/login/discord"
                         clientName: RaidOrganizer
                 provider:
                     discord:
