--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_web_auth: ^0.4.1
+  visa:
+  http:
+  provider:
+  font_awesome_flutter:
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -57,6 +61,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
