created login and register pages

--- a/server/src/main/resources/db/changelog/changelog-0.1.yaml
+++ b/server/src/main/resources/db/changelog/changelog-0.1.yaml
@@ -22,3 +22,6 @@ databaseChangeLog:
               - column:
                   name: auth_provider
                   type: varchar(15)
+              - column:
+                  name: profilePicUrl
+                  type: varchar(255)
