--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   http:
   provider:
   font_awesome_flutter:
+  image_picker: ^0.8.4+11
+  shared_preferences:
+  mime:
 
 
   # The following adds the Cupertino Icons font to your application.
