--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -31,6 +31,16 @@ spring:
         driver-class-name: org.h2.Driver
         username: fa
         password: fa
+    h2:
+        console:
+            enabled: true
+            path: "/console"
+            settings:
+                web-allow-others: false
+    servlet:
+        multipart:
+            max-file-size: 10MB
+            max-request-size: 10MB
 
 
 jwt:
