--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   image_picker: ^0.8.4+11
   shared_preferences:
   mime:
+  dropdown_search: ^2.0.1
+  dio: ^4.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -66,6 +68,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/images/role/
+    - assets/images/jobs/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
